--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: 🧩 Checkout repository
@@ -25,7 +26,9 @@ jobs:
           # yarn build
 
       - name: 🗜️ Archive project files
-        run: tar -czf backend.tar.gz ./*
+        run: |
+          tar -czf backend.tar.gz \
+            package.json yarn.lock prisma src server.js
 
       - name: 🚚 Upload build to VPS
         uses: appleboy/scp-action@master
