--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
       - name: 🧩 Checkout repository
@@ -26,7 +25,7 @@ jobs:
           # yarn build
 
       - name: 🗜️ Archive project files
-        run: tar --exclude='./node_modules' --exclude='./.git' -czf backend.tar.gz ./
+        run: tar --exclude='./node_modules' --exclude='./.git' --warning=no-file-changed -czf backend.tar.gz ./
 
       - name: 🚚 Upload build to VPS
         uses: appleboy/scp-action@master
