--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -25,7 +25,7 @@ jobs:
           # yarn build
 
       - name: 🗜️ Archive project files
-        run: tar -czf backend.tar.gz ./*
+        run: tar --exclude='./node_modules' --exclude='./.git' --warning=no-file-changed -czf backend.tar.gz ./
 
       - name: 🚚 Upload build to VPS
         uses: appleboy/scp-action@master
