feat: adjustment deploy

--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -34,7 +34,8 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "backend.tar.gz"
-          target: "~/"
+          target: "~/backend.tar.gz"
+          use_insecure_cipher: true
 
       - name: 🚀 Deploy on VPS
         uses: appleboy/ssh-action@master
