--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -26,10 +26,12 @@ jobs:
 
       - name: 🗜️ Archive project files
         run: |
+          set +e
           tar --exclude='./node_modules' \
-          --exclude='./.git' \
-          --exclude='./.github' \
-          -czf backend.tar.gz ./
+              --exclude='./.git' \
+              --exclude='./.github' \
+              --warning=no-file-changed \
+              -czf backend.tar.gz ./
 
       - name: 🚚 Upload build to VPS (with progress)
         uses: burnett01/rsync-deployments@5.2
