--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -26,9 +26,11 @@ jobs:
 
       - name: 🗜️ Archive project files
         run: |
-          mkdir -p build_package
-          cp -r src prisma package.json yarn.lock build_package/
-          tar -czf backend.tar.gz build_package
+          tar --exclude='./node_modules' \
+              --exclude='./.git' \
+              --exclude='./.github' \
+              --warning=no-file-changed \
+              -czf backend.tar.gz ./ || true
 
       - name: 🚚 Upload build to VPS (with progress)
         uses: burnett01/rsync-deployments@5.2
