feat: add check nickname guin

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "axios": "^1.11.0",
+    "axios-cookiejar-support": "^6.0.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -26,6 +27,7 @@
     "prisma": "^6.15.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tough-cookie": "^5.1.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
